fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html, body{
   width: 100%;
   height: 100vh;
   position: absolute;
+  overflow-x: hidden;
   
 
 
@@ -13,4 +14,9 @@ html, body{
   width: 100%;
   height: 100vh;
   position: absolute;
+}
+
+button {
+  border: none;
+  background: none;
 }
