--- a/src/components/features.css
+++ b/src/components/features.css
@@ -25,7 +25,7 @@
 }
 
 .partner-frame {
-  width: 600px;
+  width: 100%;
   height: 48px;
 
 
@@ -44,9 +44,9 @@
   gap: 24px;
 
   position: absolute;
-  width: 600px;
+  width: 100%;
   height: 48px;
-  left: calc(50% - 600px/2);
+  left: calc(50% - 100% / 2);
   top: 0px;
 }
 
@@ -57,7 +57,7 @@
   padding: 0px;
   gap: 16px;
   padding-bottom: 508px;
-  width: 600px;
+  width: 100%;
   height: 48px;
 
   flex: none;
@@ -67,7 +67,7 @@
 }
 
 .heading {
-  width: 600px;
+  width: 100%;
   height: 48px;
 
   /* Desktop/Heading Large */
@@ -128,25 +128,7 @@
     flex-grow: 0; */
 }
 
-.features-grants {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 80px 108px;
-  gap: 46px;
 
-  width: 100%;
-  height: 355px;
-
-
-  /* Inside auto layout */
-
-  flex: none;
-  order: 2;
-  align-self: stretch;
-  flex-grow: 0;
-}
 
 .control-left {
   position: absolute;
@@ -355,10 +337,14 @@
 }
 
 .partner-list {
+  position: absolute;
+  width: 90%;
+  left: 5%;
   display: flex;
   justify-content: center;
   gap: 0 44px;
   padding-top: 138px;
+  margin: 0px;
 
 }
 
