--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,3 +1,5 @@
+
+
 .navbar {
     display: flex;
     flex-direction: column;
@@ -41,7 +43,9 @@
 
 }
 
-
+.icon-bar{
+    color: #FFFFFF;
+}
 
 
 
